--- a/index.html
+++ b/index.html
@@ -15,41 +15,105 @@
 </head>
 
 <body>
-
+  
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-12 col-xl-12 col">
-          <h1 class="text-center display-1
-           my-5">Panditas!</h1>
+        <div class="col-xs-8">
+          <h1 class="text-center display-1 my-2">Panditas magicos!</h1>
         </div>
       </div>
   </div>
 </header>
 
 <main>
+
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-12 col-xl-12">
-        <img src="/public/images/panditas1.png" class="img-fluid mb-5 mx-auto" alt="panditas de goma">
+      <div class="col-xs-12">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary my-2">
+          <div class="container-fluid mx-auto">
+            <a class="navbar-brand" href="">Menú:</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active"
+                aria-current="page" href="#">Rojos</a>
+                <a class="nav-link" href="#">Verdes</a>
+                <a class="nav-link" href="#">Azules</a>
+              </div>
+            </div>
+          </div>
+        </nav>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-xs-12 col-md-12 col-xl-6">
-        <p class="lead text-center my-5"> Nuestros deliciosos ositos de goma están hechos con ingredientes 100% naturales, además su consumo es seguro en personas de todas las edades.</p>
-      </div>
-      
-      <div class="row">
-        <div class="col-xs-12 col-md-12 col-xl-12">
-          <button type="button" class="btn btn-primary btn-lg my-5" role="button">Comprar ahora</button>
+  <div class="container">
+    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active d-block mx-auto img-fluid">
+          <img src="/public/images/panditas1.png" alt="ositos de goma">
         </div>
       </div>
-</main>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <p class="lead text-center my-2"> Nuestros deliciosos ositos de goma están hechos con ingredientes 100% naturales, además su consumo es seguro en personas de todas las edades.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <button type="button" class="btn btn-primary btn-lg my-5" role="button">Comprar ahora</button>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pandita</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pandita</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pandita</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+crossorigin="anonymous"></script>
 </body>
 
 </html>
